Updating the image resources !

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<strong tabindex="1" id="pp">Results will be displayed here</strong> <br><span id="myspan">Reference
 				Text...</span>
 			<p>URl-<a id="ur" href="">Click here</a></p>
-			<img src="/assets/search.png" style="height: 200px;width: 200px" id="myimg" alt="Your image will come here">
+			<img src="/Fake-News_Detector/assets/search.png" style="height: 200px;width: 200px" id="myimg" alt="Your image will come here">
 		</p>
 	</div>
 	<div class="content" style="margin-top: 25px;">
