--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						document.getElementById("myspan").innerHTML = "";
 						document.getElementById("ur").href = "";
 						// document.getElementById("myimg").src = "";
-						document.getElementById("myimg").src = "/assets/notfound.svg";
+						document.getElementById("myimg").src = "/Fake-News_Detector/assets/notfound.svg";
 					}
 				}
 
