Changing the title and main H1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>
-		NEWS API
+		COVID-19 Updates
 	</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -62,7 +62,7 @@
 
 <body style="margin-top: 30px;">
 	<header style="text-align: center;">
-		<h1>Fake News Detector</h1>
+		<h1>News Bulletin</h1>
 
 		<h3>You type, We Check !</h3>
 	</header>
