Adding the updated description with meta tags under head.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+<meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
 
 
 <script type="text/javascript">
@@ -84,7 +86,7 @@
 	<div class="content" style="margin-top: 25px;">
 		<h1 style="font-family: 'Lato', sans-serif; font-weight: 700; font-style: normal; color: #61080f; font-size:
 			32px;">FAQs</h1>
-		<h3>Most Commonly Asked !</h3>
+		<h3>About COVID-19</h3>
 		<div>
 			<input type="checkbox" id="question1" name="q" class="questions">
 			<div class="plus">+</div>
