Added the FAQ's to the best of my knowledge !
resources: http://www.emro.who.int/health-topics/corona-virus/questions-and-answers.html

--- a/index.html
+++ b/index.html
@@ -290,10 +290,12 @@
 			<input type="checkbox" id="question1" name="q" class="questions">
 			<div class="plus">+</div>
 			<label for="question1" class="question">
-				Question 1
+			Can the virus that causes COVID-19 be transmitted through the air? 
 			</label>
 			<div class="answers">
-				<p>Answer 1 </p>
+				<p>Studies to date suggest that the virus that causes COVID-19 is mainly
+transmitted through contact with respiratory droplets rather than
+through the air.  </p>
 
 			</div>
 		</div>
@@ -301,10 +303,17 @@
 			<input type="checkbox" id="question2" name="q" class="questions">
 			<div class="plus">+</div>
 			<label for="question2" class="question">
-				Question 2
+				Can CoVID-19 be caught from a person who has no symptoms? 
 			</label>
 			<div class="answers">
-				<p>Answer 2 </p>
+				<p>The main way the disease spreads is through respiratory droplets
+expelled by someone who is coughing. The risk of catching COVID-19
+from someone with no symptoms at all is very low. However, many
+people with COVID-19 experience only mild symptoms. This is
+particularly true at the early stages of the disease. It is therefore
+possible to catch COVID-19 from someone who has, for example, just
+a mild cough and does not feel ill. 
+ </p>
 
 			</div>
 		</div>
@@ -312,10 +321,18 @@
 			<input type="checkbox" id="question3" name="q" class="questions">
 			<div class="plus">+</div>
 			<label for="question3" class="question">
-				Question 3
+			Are there any medicines or therapies that can prevent or cure
+COVID-19?
 			</label>
 			<div class="answers">
-				<p>Answer 3</p>
+				<p>While some western, traditional or home remedies may provide
+comfort and alleviate symptoms of COVID-19, there is no evidence
+that current medicine can prevent or cure the disease. We does not
+recommend self-medication with any medicines, including antibiotics,
+as a prevention or cure for COVID-19. However, there are several
+ongoing clinical trials that include both western and traditional
+medicines. We will continue to provide updated information as soon
+as clinical findings are available. </p>
 
 			</div>
 		</div>
@@ -323,10 +340,15 @@
 			<input type="checkbox" id="question4" name="q" class="questions">
 			<div class="plus">+</div>
 			<label for="question4" class="question">
-				Question 4
+			How long is the incubation period for COVID-19?
 			</label>
 			<div class="answers">
-				<p>Answer 4 </p>
+				<p>The “incubation period” means the time between catching the virus
+and beginning to have symptoms of the disease. Most estimates of
+the incubation period for COVID-19 range from 1-14 days, most
+commonly around five days. These estimates will be updated as more
+data become available. 
+</p>
 
 			</div>
 		</div>
@@ -334,10 +356,10 @@
 			<input type="checkbox" id="question5" name="q" class="questions">
 			<div class="plus">+</div>
 			<label for="question5" class="question">
-				Question 5
+		What can I do to protect myself?
 			</label>
 			<div class="answers">
-				<p>Answer 5</p>
+				<p>Standard recommendations to reduce exposure to and transmission of a range of illnesses include maintaining basic hand and respiratory hygiene, and safe food practices  and avoiding close contact, when possible, with anyone showing symptoms of respiratory illness such as coughing and sneezing.</p>
 			</div>
 		</div>
 	</div>
